# pyaro-readers

./: README.md  pyproject.toml  pyproject.toml_future  setup.cfg
.github/workflows/: CI.yml
src/geocoder_reverse_natural_earth/: geocoder_reverse_ne.py
src/pyaro_readers/aeronetsdareader/: AeronetSdaTimeseriesReader.py
src/pyaro_readers/aeronetsunreader/: AeronetSunTimeseriesReader.py
src/pyaro_readers/ascii2netcdf/: Ascii2NetcdfTimeseries.py
tests/: test_AERONETSDATimeSeriesReader.py  test_AERONETTimeSeriesReader.py  test_Ascii2NetcdfTimeseries.py  test_CSVTimeSeriesReader.py
tests/testdata/: aeronetsda_testdata.csv  csvReader_testdata.csv  test_geocoder_reverse_natural_earth.py
tests/testdata/NILU/: StationList.csv  data_daily.2020.nc  data_daily.2021.nc
