[metadata]
name = pyaro_readers
version = 0.0.3dev
author = MET Norway
description = implementations of pyaerocom reading plugings using pyaro as interface
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science
url = https://github.com/metno/pyaro-readers

[options]
python_version = >=3.9
install_requires =
    pyaro >= 0.0.6
    netCDF4
    requests
    fiona
    shapely
    rtree
    tqdm

package_dir =
    =src
packages = pyaro_readers.aeronetsunreader, pyaro_readers.aeronetsdareader, geocoder_reverse_natural_earth, pyaro_readers.ascii2netcdf
test_require = tox:tox

[options.package_data]
geocoder_reverse_natural_earth =
    *.zip

[options.entry_points]
pyaro.timeseries =
    aeronetsunreader = pyaro_readers.aeronetsunreader:AeronetSunTimeseriesEngine
    aeronetsdareader = pyaro_readers.aeronetsdareader:AeronetSdaTimeseriesEngine
    ascii2netcdf = pyaro_readers.ascii2netcdf:Ascii2NetcdfTimeseriesEngine


[tox:tox]
min_version = 4.0
skip_missing_interpreters = True
isolated_build = True
env_list =
    py310
    format
#depends =

[testenv]
commands = python3 -m unittest discover -s tests

[testenv:format]
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit

